--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -18,3 +18,6 @@ logging.level.org.springframework.jdbc.core.simple.SimpleJdbcInsert=TRACE
 
 # log the parameters of sql statement
 #logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
+
+
+logging.pattern.console=%-5level %logger{36} - %msg%n
