--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ logging.level.org.springframework.jdbc.core.JdbcTemplate=TRACE
 logging.level.org.springframework.jdbc.core.simple.SimpleJdbcInsert=TRACE
 
 # log the parameters of sql statement
-#logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 
 
 logging.pattern.console=%-5level %logger{36} - %msg%n
