--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,17 @@
 		<java.version>21</java.version>
 	</properties>
 
+	<developers>
+		<developer>
+			<name>Antony Joseph</name>
+		</developer>
+	</developers>
+	
 	<dependencies>
 		<dependency>
 			<groupId>io.github.spring-jdbc-crud</groupId>
 			<artifactId>simplejdbcmapper</artifactId>
-			<version>1.3.2</version>
+			<version>1.4.0</version>
 		</dependency>
 
 		<dependency>
