--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.flyway.cleanDisabled=false
+
 
 # H2 database configuration. For other database configurations see SimpleJdbcMapper documentation at:
 # https://github.com/spring-jdbc-crud/SimpleJdbcMapper#spring-bean-configuration-for-simplejdbcmapper
@@ -18,5 +18,7 @@ logging.level.org.springframework.jdbc.core.simple.SimpleJdbcInsert=TRACE
 # log the parameters of sql statement
 logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 
-
 logging.pattern.console=%-5level %logger{36} - %msg%n
+
+spring.flyway.cleanDisabled=false
+logging.level.org.flywaydb.core=WARN
